// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flower preset revision > still writes the text this revision was recorded with > flower-preset-revision-2 1`] = `
{
  "additionalNotes": "내레이션은 꽃말과 그 유래를 설명하는 해설이다. 등장인물의 대사가 아니다.
말투는 당나라 시인 두보(杜甫)의 한시를 한국어로 옮긴 것처럼 쓴다. 다음이 그 말투다.
  두 구절을 나란히 놓아 서로 비추게 한다. 한쪽이 크면 다른 쪽은 작다.
  감정을 적지 않는다. 사물과 그 상태만 적으면 감정은 읽는 사람에게서 일어난다.
  시간이 흘렀다는 것을 오직 사물의 변화로만 말한다.
  꾸미는 말을 덜어내고 명사와 움직임을 남긴다. 형용사는 꼭 필요할 때만 하나.
  문장은 "~다"로 끝내 담담하게 맺는다.
한 장면에 한두 문장, 문장은 짧게. 화면에 실제로 보이는 것(빛·흙·싹·잎·봉오리)을 먼저 적고, 거기서 꽃말로 건너간다.
감정은 이름 붙이지 말고 장면으로 보여준다.
아래 왼쪽처럼 쓰지 말고, 오른쪽이 시키는 대로 한다.
  "작은 싹도 놀라운 생명력으로 자라납니다" → 지금 화면에서 실제로 움직이는 것 하나만 적는다
  "~에 대한 감탄이 담겨 있습니다" → 아직 오지 않은 것을 적어서 기다리게 한다
  "가능성을 활짝 펼치는 힘인지도 모릅니다" → 설명을 덧붙이지 말고 한 문장으로 끊는다
  "~라는 뜻입니다" → 뜻을 말하지 말고, 장면이 그 뜻이 되게 둔다
네 장면은 하는 일이 서로 다르다.
  1 화면에서 지금 일어나는 일 하나. 그리고 꽃말을 처음 꺼낸다.
  2 자라는 모습에서 그 말이 어떻게 나왔는지.
  3 아직 오지 않은 것 하나. 닫혀 있음, 기다림.
  4 열린 뒤의 한 문장. 꽃말을 다시 설명하지 말고, 그 말이 무엇이었는지 느끼게 한다.
네 문장은 길이도 구조도 서로 달라야 한다. 같은 말로 시작하는 문장을 두 번 쓰지 않는다.
말투만 참고할 예시다. 꽃과 상관없는 문장이고, 여기 쓰인 단어는 가져다 쓰지 않는다.
  "담은 낮아졌고, 우물은 깊어졌다."
  "등불 하나가 스무 해를 건너왔다."
말투가 감성적이어도 사실은 느슨해지지 않는다. 확실하지 않은 유래는 단정하지 말고 "전해진다" 처럼 쓴다.",
  "character": "",
  "clipDurationSeconds": 5,
  "fullStory": "장미의 꽃말인 "사랑"의 유래와 의미를 설명한다.
화면은 흙에 이미 심긴 장미 씨앗에서 싹이 흙을 뚫고 올라오는 데서 시작해, 줄기와 잎이 자라고 봉오리가 맺혀 꽃이 활짝 피기까지 한 방향으로 진행한다.
씨앗을 심거나 흙으로 덮는 장면은 넣지 않는다. 첫 장면부터 식물이 이미 자라고 있어야 한다.
각 장면은 식물이 자라는 과정을 압축해 보여주는 타임랩스다. 한 장면 안에서 식물이 눈에 띄게 자라야 하고, 첫 프레임과 마지막 프레임의 크기·형태가 분명히 달라야 한다. 빛이나 배경만 흔들리고 식물이 그대로인 장면은 안 된다.
한 장면에서는 한 단계만 자란다. 그 장면이 끝난 모습이 다음 장면이 시작하는 모습이 된다.
장면이 넘어가도 같은 장미, 같은 자리의 땅, 같은 각도, 같은 빛을 유지한다.
식물은 화분이 아니라 땅에 뿌리내린 채 자란다. 화분·포트·플랜터는 화면에 넣지 않는다.",
  "genre": "정보·교양",
  "lore": "",
  "mood": "차분하고 서정적, 잔잔한 경외감",
  "narrationEnabled": true,
  "preset": {
    "id": "flower_meaning",
    "revision": 2,
  },
  "projectName": "장미 꽃말",
  "sceneCount": 4,
  "sceneImageContinuityEnabled": true,
  "styleNotes": {
    "aspect": "9:16",
    "avoid": "사람, 손, 글자, 로고, 화분·포트·플랜터 같은 심는 용기. 그리고 배경이 장면마다 바뀌는 것",
    "camera": "삼각대에 고정된 카메라. 프레임·각도·거리를 처음부터 끝까지 그대로 두고 움직이지 않는다",
    "color": "따뜻한 아침 햇빛, 부드러운 초록과 흙빛",
    "dialogue": "",
    "lighting": "부드러운 역광의 아침 햇살",
    "visualStyle": "사실적인 식물 성장 타임랩스, 자연 접사, 얕은 심도",
  },
  "subtitlesEnabled": true,
  "topic": "장미의 꽃말 — 사랑",
}
`;

exports[`flower preset revision > still writes the text this revision was recorded with > flower-preset-revision-3 1`] = `
{
  "additionalNotes": "내레이션은 꽃말과 그 유래를 설명하는 해설이다. 등장인물의 대사가 아니다.
말투는 당나라 시인 두보(杜甫)의 한시를 한국어로 옮긴 것처럼 쓴다. 다음이 그 말투다.
  두 구절을 나란히 놓아 서로 비추게 한다. 한쪽이 크면 다른 쪽은 작다.
  감정을 적지 않는다. 사물과 그 상태만 적으면 감정은 읽는 사람에게서 일어난다.
  시간이 흘렀다는 것을 오직 사물의 변화로만 말한다.
  꾸미는 말을 덜어내고 명사와 움직임을 남긴다. 형용사는 꼭 필요할 때만 하나.
  문장은 "~다"로 끝내 담담하게 맺는다.
한 장면에 한두 문장, 문장은 짧게. 화면에 실제로 보이는 것(빛·흙·싹·잎·봉오리)을 먼저 적고, 거기서 꽃말로 건너간다.
감정은 이름 붙이지 말고 장면으로 보여준다.
아래 왼쪽처럼 쓰지 말고, 오른쪽이 시키는 대로 한다.
  "작은 싹도 놀라운 생명력으로 자라납니다" → 지금 화면에서 실제로 움직이는 것 하나만 적는다
  "~에 대한 감탄이 담겨 있습니다" → 아직 오지 않은 것을 적어서 기다리게 한다
  "가능성을 활짝 펼치는 힘인지도 모릅니다" → 설명을 덧붙이지 말고 한 문장으로 끊는다
  "~라는 뜻입니다" → 뜻을 말하지 말고, 장면이 그 뜻이 되게 둔다
네 장면은 하는 일이 서로 다르다.
  1 화면에서 지금 일어나는 일 하나. 그리고 꽃말을 처음 꺼낸다.
  2 자라는 모습에서 그 말이 어떻게 나왔는지.
  3 아직 오지 않은 것 하나. 닫혀 있음, 기다림.
  4 열린 뒤의 한 문장. 꽃말을 다시 설명하지 말고, 그 말이 무엇이었는지 느끼게 한다.
네 문장은 길이도 구조도 서로 달라야 한다. 같은 말로 시작하는 문장을 두 번 쓰지 않는다.
말투만 참고할 예시다. 꽃과 상관없는 문장이고, 여기 쓰인 단어는 가져다 쓰지 않는다.
  "담은 낮아졌고, 우물은 깊어졌다."
  "등불 하나가 스무 해를 건너왔다."
말투가 감성적이어도 사실은 느슨해지지 않는다. 확실하지 않은 유래는 단정하지 말고 "전해진다" 처럼 쓴다.",
  "character": "",
  "clipDurationSeconds": 5,
  "fullStory": "장미의 꽃말인 "사랑"의 유래와 의미를 설명한다.
화면은 흙에 이미 심긴 장미 씨앗에서 싹이 흙을 뚫고 올라오는 데서 시작해, 줄기와 잎이 자라고 봉오리가 맺혀 꽃이 활짝 피기까지 한 방향으로 진행한다.
씨앗을 심거나 흙으로 덮는 장면은 넣지 않는다. 첫 장면부터 식물이 이미 자라고 있어야 한다.
각 장면은 식물이 자라는 과정을 압축해 보여주는 타임랩스다. 한 장면 안에서 식물이 눈에 띄게 자라야 하고, 첫 프레임과 마지막 프레임의 크기·형태가 분명히 달라야 한다. 빛이나 배경만 흔들리고 식물이 그대로인 장면은 안 된다.
한 장면에서는 한 단계만 자란다. 그 장면이 끝난 모습이 다음 장면이 시작하는 모습이 된다.
장면이 넘어가도 같은 장미, 같은 자리의 땅, 같은 각도, 같은 빛을 유지한다.
식물은 화분이 아니라 땅에 뿌리내린 채 자란다. 화분·포트·플랜터는 화면에 넣지 않는다.
네 장면의 샷 크기·카메라 거리·화각은 모두 같다. 식물이 커져도 당겨 찍지 않는다. 먼 배경(산·하늘·들판)이 네 장면 모두 같은 자리에 보인다.",
  "genre": "정보·교양",
  "lore": "",
  "mood": "차분하고 서정적, 잔잔한 경외감",
  "narrationEnabled": true,
  "preset": {
    "id": "flower_meaning",
    "revision": 3,
  },
  "projectName": "장미 꽃말",
  "sceneCount": 4,
  "sceneImageContinuityEnabled": true,
  "styleNotes": {
    "aspect": "9:16",
    "avoid": "사람, 손, 글자, 로고, 화분·포트·플랜터 같은 심는 용기. 그리고 배경이 장면마다 바뀌는 것",
    "camera": "삼각대에 고정된 카메라. 프레임·각도·거리를 처음부터 끝까지 그대로 두고 움직이지 않는다",
    "color": "따뜻한 아침 햇빛, 부드러운 초록과 흙빛",
    "dialogue": "",
    "lighting": "부드러운 역광의 아침 햇살",
    "visualStyle": "사실적인 식물 성장 타임랩스, 자연 접사, 얕은 심도",
  },
  "subtitlesEnabled": true,
  "topic": "장미의 꽃말 — 사랑",
}
`;
